--- a/templates/apply.html
+++ b/templates/apply.html
@@ -33,11 +33,11 @@
                 <div class="form-group">
                     <label for="gender">Gender:</label>
                     <div class="spacer"></div>
-                    <input type="radio" id="male" name="gender" value="male">
-                    <span >Male</span>
+                    <input type="radio" id="male" name="gender" value="male" required>
+                    <label for="male">Male</label>
                     <div class="spacer"></div>
-                    <input type="radio" id="female" name="gender" value="female">
-                    <span  >Female</span>
+                    <input type="radio" id="female" name="gender" value="female" required>
+                    <label for="female">Female</label>
                     <div class="spacer"></div>
                 </div>
                 <div class="form-group">
